# fhirlight

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
api/: admin.py  api_views.py  datatypes.py  fields.py  form_views.py  models.py  pagination.py  serializers.py  views.py
api/forms/: organization.py
api/migrations/: 0001_concepts.py  0001_initial.py  0002_baseprofile_allergyintoleranceprofile_and_more.py  0002_baseprofile_alter_concept_valueset_and_more.py  0002_baseprofile_locationaddress_alter_concept_display_and_more.py  0002_baseprofile_locationaddress_alter_concept_system_and_more.py  0002_baseprofile_locationaddress_and_more.py  0002_baseprofile_patientidentifier_alter_concept_valueset_and_more.py  0002_load_concepts.py  0002_location_organization_practitioner_and_more.py  0002_locationaddress_operationoutcome_organization_and_more.py  0002_locationaddress_organization_practitioner_and_more.py  0002_locationaddress_ukcore_alter_concept_system_and_more.py  0002_practitioner_alter_identifier_system_and_more.py  0002_v1.py  0003_alter_organization_id_alter_practitioner_id.py  0003_observation_performer_observation_subject.py  0003_rename_organization_organizationaddress_profile_and_more.py  0003_specimen_bodysite_specimen_collecteddatetime_and_more.py  0004_alter_identifier_system.py  concepts.csv  (+6 more)
fhirlight/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_forms.py  test_management.py  test_models.py  test_orm.py  test_serializers.py  test_views.py  utils.py
(+162 files in other folders)
